# DexBot

./: DESIGN.md  README.md  docker-compose.yml  package-lock.json
apps/api/: .env  Cargo.toml
apps/api/src/: main.rs
apps/web/: package-lock.json  package.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx
apps/web/src/features/robots/: RobotsPage.tsx  api.ts  types.ts
apps/web/src/lib/: api.ts
infra/local/: schema.sql  seed.sql
